# toygine

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  cmake_linux_make_project.sh  cmake_osx_xcode_project.sh  cmake_win32_msvc2017_project.cmd  cmake_win64_msvc2017_project.cmd
include/: toygine2.h  toygine2.hpp
player/: CMakeLists.txt  app.cpp  app.hpp  app.inl  main_osx.cpp  main_osx.mm  main_windows.cpp
player/resources_osx/: appinfo.plist  icon.icns  mainmenu.xib
src/: CMakeLists.txt
src/backends/: coreconfig_clang.hpp  coreconfig_cpp11_clang.h  coreconfig_cpp11_clang.hpp  coreconfig_cpp11_gcc.h  coreconfig_cpp11_gcc.hpp  coreconfig_cpp11_msvc.h  coreconfig_cpp11_msvc.hpp  coreconfig_gcc.hpp  coreconfig_msvc.hpp
src/backends/linux/: backend_config.h  backend_config.hpp
src/backends/osx/: backend_config.h  backend_config.hpp
src/backends/windows/: backend_config.h  backend_config.hpp
src/core/: core.h.in  core.hpp.in  hashes.cpp  hashes.h  hashes.hpp  logger.cpp  logger.hpp  logger.inl  utils.cpp  utils.hpp
src/filesystem/: filename.cpp  filename.hpp  filename.inl
src/mathematics/: point.hpp  point.inl  vector2d.cpp  vector2d.hpp  vector2d.inl
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt  test_runner.cpp
test/unittest/core/: hashes.cpp  logger.cpp  utils.cpp
test/unittest/filesystem/: filename.cpp
test/unittest/mathematics/: point.cpp  vector2d.cpp
